fix(notification): fix content alignmtent in container

--- a/packages/ui-core/src/components/Notification/Notification.less
+++ b/packages/ui-core/src/components/Notification/Notification.less
@@ -16,7 +16,6 @@
 
     &__container {
         display: flex;
-        align-items: flex-start;
     }
 
     &__title {
@@ -54,6 +53,7 @@
         align-items: flex-start;
         margin-left: 12px;
         max-width: 212px;
+        align-self: center;
 
         @media @mobileBU {
             max-width: 540px;
@@ -76,6 +76,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        align-self: flex-start;
     }
 
     &__attention-icon,
